* Switched getFirst back to get(0) as java 17 does not support this